        PR ld/5533         * ldlang.c (lang_end): Issue a warning for a missing start symbol         of a shared library if the symbol was specified on the command         line.